# process-management-simulator

./: .gitignore  ArvoreProcessos.c  ArvoreProcessos.h  CMakeLists.txt  Controle.c  Controle.h  Estados.c  Estados.h  Interface.c  Interface.h  ProcessMemory.c  ProcessMemory.h  Processo.c  Processo.h  README.md  TabelaProcessos.c  TabelaProcessos.h  a  comandos.txt  filaEstatica.c  filaEstatica.h  filaProcessos.c  filaProcessos.h  main.c  mainProcesso.c  pilhaEstatica.c  pilhaEstatica.h  processo0.txt
src/process/: control.c  control.h  manager.c  manager.h  schedulling.c  schedulling.h
src/process/Estruturas/: CPU.c  CPU.h  TabelaProcessos.c  TabelaProcessos.h  filaEstatica.c  filaEstatica.h  pilhaEstatica.c  pilhaEstatica.h  simulatedProcess.c  simulatedProcess.h
